--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class = 'container'>
 			<div class= 'bio'>
 			<h2>Bio</h2>
-				<p>Having grown up in the small town of Canton, Michigan, I never envisioned myself exploring the creative space of web design and user research. I had never heard of any professions outside of the traditional careers: engineering and doctors and the vague generalities of being a “businessperson”. I liked to create, liked to daydream, and liked to imagine, but didn’t know how to tie these energies together into something tangible I could say I was. Through finding the majors I did, having conversations with people in a wide variety of industries, and doing my fair share of Linkedin stalking, I have found my home in a nice little burrow where creativity intersects with business, technology, and psychology. </p>
+				<p>Having grown up in the small town of Canton, Michigan, I never envisioned myself exploring the creative space of web design and user research. I liked to create, liked to daydream, and liked to imagine, but didn’t know how to tie these energies together into something tangible I could say I was. Through finding the majors I did, having conversations with people in a wide variety of industries, and doing my fair share of Linkedin stalking, I have found my home in a nice little burrow where creativity intersects with business, technology, and psychology. </p>
 			</div>
 			<div class='education'>
 			<h2>Education</h2>
@@ -36,16 +36,16 @@
 			</div>
 		<div class="gallery">
 			<img id="headshot" src="images/headshot_1.jpg" alt="" />
-			<img id="camel" src="images/camel.png" alt="" />
-			<img id='scarf' src='images/scarf_1.jpg' alt='' />
-			<img id='yoga' src='images/yoga.jpg' alt='' />
-			<img id='food' src="images/food.png" alt='' />
-			<img id='gameday' src='images/gameday.png' alt='' />
 			<img id='big' src='images/big.png' alt='' />
-			<img id='high_school' src='images/high_school.png' alt='' />
+			<img id='spain' src='images/spain.png' alt='' />
+			<img id='couple' src='images/couple.png' alt='' />
+			<img id='food' src="images/food.png" alt='' />
+			<img id='friend' src='images/friend.jpg' alt='' />
+			<img id="camel" src="images/camel.png" alt="" />
 			<img id='new_york' src='images/new_york.png' alt='' />
-			<img id='roommates' src='images/roommates.png' alt='' />
+			<img id='kicking' src='images/kicking.png' alt='' />
 		</div>
+
 	</div>
 	</main>
 </body>
